replace all project files

--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>PostService</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>PostService</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header>
+      <span class="logo"><a href="#">Logo</a></span>
+      <nav class="top-nav">
+        <ul class="top-nav-list">
+          <li><a href="#">item</a></li>
+          <li><a href="#">item</a></li>
+          <li><a href="#">item</a></li>
+          <li><a href="#">item</a></li>
+          <li><a href="#">item</a></li>
+        </ul>
+      </nav>
+    </header>
+    <app-root></app-root>
+    <footer>footer</footer>
+  </body>
 </html>
